2004-05-19  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* diagrams/rectdiagram.cpp (calcDiagram): Fixed an endless
	loop bug when trying to calculate grid properties for zero
	ymax and ymin.

	* qucsfile.cpp (simpleInsertWire): Fixed segfault bug when 
	accessing null pointer.

	* qucsview.cpp (MPressRotate): Fixed possible cause of
	segfault.
	(MReleasePaste): Fixed segfault reason when the re-inserted wire
	gets deleted.

	* qucsdoc.cpp (insertWire): Run oneLabel() only if the wire has
	not been deleted in this function.  Fixes segfault of GUI.
	(deleteWire): Fixed apparent typo which lead to segfault.

2004-05-15  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* diagrams/diagram.cpp (loadIndepVarData): Fixed typo
	in error message.

	* qucs_de.ts: Updated german translation.

	* qucs.cpp (QucsApp): Fixed Qucs file filter description.

2004-05-15  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* markers show more-dimensional data correct
	* cursor up/down key moves selected markers
	* outsourced toggle actions into class "QucsActions"
	* fixed bug in tabdiagram (more-dimensional display)

2004-05-10  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed a few bugs with the graph handling
	* the graph line is now saved within "..."

2004-05-09  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug after placing diagram dialog
	* fixed bug in scaling smith chart graphes
	* diagrams can show graph with multiple dimensions

2004-05-07  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (TRANSLATIONS): Added romanian translation file.

2004-05-01  Stefan Jahn  <stefan@lkcc.org>

	* qucs_it.ts: Applied changes made by Gorgio.  Thanks.

2004-04-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* strongly improved save as function
	* outsourced the initialization of QucsApp into QucsInit
	* polar diagrams correctly fit negative values
	* rectangle diagrams can show data containing only one point